Updating to also update the CostInBillingCurrency field. Saves the rate card json (can turn off with app setting `"SaveRateCardData" : false`

--- a/appsettings.json
+++ b/appsettings.json
@@ -4,8 +4,11 @@
     "AzureWebJobsStorage": "UseDevelopmentStorage=true",
     "FUNCTIONS_WORKER_RUNTIME": "dotnet-isolated",
     "ManagementGroupId": "",
+    "TenantId": "",
     "StorageConnectionString": "",
-    "ContainerName": ""
+    "ContainerName": "",
+    "UseLegacyRateCard": true,
+    "SaveRateCardData": true
   },
  
 }
