Refactored and cleaned orchestration of tasks When using legacy rate card, new options to also save the Rate Card JSON and Raw cost detail report. To disable, add `"SaveRateCardData"` : false` and/or `"SaveRawBillingReport": false` app setting

--- a/appsettings.json
+++ b/appsettings.json
@@ -8,7 +8,8 @@
     "StorageConnectionString": "",
     "ContainerName": "",
     "UseLegacyRateCard": true,
-    "SaveRateCardData": true
+    "SaveRateCardData": true,
+    "SaveRawBillingReport" :  true
   },
  
 }
