Adding configuration for `OfferDurableId`

--- a/appsettings.json
+++ b/appsettings.json
@@ -8,8 +8,9 @@
     "StorageConnectionString": "",
     "ContainerName": "",
     "UseLegacyRateCard": true,
+    "OfferDurableId": "",
     "SaveRateCardData": true,
-    "SaveRawBillingReport" :  true
+    "SaveRawBillingReport": true
   },
  
 }
