Adding MaxConcurrency and RateCardPerSubscription configuration. Updating deploy to use RBAC

--- a/appsettings.json
+++ b/appsettings.json
@@ -10,7 +10,9 @@
     "UseLegacyRateCard": true,
     "OfferDurableId": "",
     "SaveRateCardData": true,
-    "SaveRawBillingReport": true
+    "SaveRawBillingReport": true,
+    "MaxConcurrency": 2,
+    "RateCardPerSubscription": false
   },
  
 }
