--- a/.github/workflows/main_azurebillingv2.yml
+++ b/.github/workflows/main_azurebillingv2.yml
@@ -7,6 +7,7 @@ on:
   push:
     branches:
       - main
+
   workflow_dispatch:
 
 env:
@@ -36,7 +37,8 @@ jobs:
         uses: Azure/functions-action@v1
         id: fa
         with:
+          creds: ${{ secrets.AZURE_RBAC_CREDENTIALS }}
           app-name: 'azurebillingv2'
           slot-name: 'Production'
           package: '${{ env.AZURE_FUNCTIONAPP_PACKAGE_PATH }}/output'
-          publish-profile: ${{ secrets.AZUREAPPSERVICE_PUBLISHPROFILE_56AF599502654B78AD1BC925783F2F7D }}
+
