--- a/.github/workflows/main_azurebillingv2.yml
+++ b/.github/workflows/main_azurebillingv2.yml
@@ -33,12 +33,22 @@ jobs:
           dotnet build --configuration Release --output ./output
           popd
 
+      # Deploy using Service Principal login: https://learn.microsoft.com/en-us/azure/app-service/deploy-github-actions?tabs=userlevel
+      - name: 'Login to Azure'
+        uses: azure/login@v1
+        with:
+         creds: ${{ secrets.AZURE_RBAC_CREDENTIALS }}
+
       - name: 'Run Azure Functions Action'
         uses: Azure/functions-action@v1
         id: fa
         with:
-          creds: ${{ secrets.AZURE_RBAC_CREDENTIALS }}
           app-name: 'azurebillingv2'
           slot-name: 'Production'
           package: '${{ env.AZURE_FUNCTIONAPP_PACKAGE_PATH }}/output'
+
+
+      - name: logout
+        run: |
+          az logout
 
